[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voxgig-sdk-indoor-environmental-monitoring"
version = "0.0.1"
description = "Unofficial generated Python SDK for the Indoor Environmental Monitoring public API. Not affiliated with or endorsed by the upstream API provider."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
keywords = ["voxgig", "sdk", "generated-sdk", "openapi", "api-client", "indoor-environmental-monitoring"]
dependencies = [
    "requests>=2.33",
]

[project.urls]
Homepage = "https://github.com/voxgig-sdk/indoor-environmental-monitoring-sdk"
Repository = "https://github.com/voxgig-sdk/indoor-environmental-monitoring-sdk"
Issues = "https://github.com/voxgig-sdk/indoor-environmental-monitoring-sdk/issues"

# Explicit package list — setuptools auto-discovery refuses to pick when
# multiple top-level dirs (core/entity/feature/utility) are present.
[tool.setuptools.packages.find]
include = ["core*", "entity*", "feature*", "utility*"]
